--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "@vueuse/core": "^9.11.0",
+    "pinia": "^2.0.29",
     "sass": "^1.57.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
