--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sass": "^1.57.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
+    "vue-router": "^4.1.6",
     "vue-tsc": "^1.0.11"
   }
 }
