--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vueuse/core": "^9.11.0",
     "pinia": "^2.0.29",
