--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install",
+    "eslint": "eslint -ext .js,.jsx,ts,.tsx,vue src",
+    "lint": "lint-staged"
   },
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^3.0.0",
@@ -16,6 +19,8 @@
     "@types/node": "^18.11.18",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vueuse/core": "^9.11.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
     "pinia": "^2.0.29",
     "pinia-plugin-persist": "^1.0.0",
     "sass": "^1.57.1",
@@ -24,5 +29,8 @@
     "vite": "^4.0.0",
     "vue-router": "^4.1.6",
     "vue-tsc": "^1.0.11"
+  },
+  "lint-staged": {
+    "src/**": "eslint" 
   }
 }
