--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^17.4.2",
     "@types/node": "^18.11.18",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vueuse/core": "^9.11.0",
+    "commitlint": "^17.4.2",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "pinia": "^2.0.29",
@@ -31,6 +33,11 @@
     "vue-tsc": "^1.0.11"
   },
   "lint-staged": {
-    "src/**": "eslint" 
+    "src/**": "eslint"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   }
 }
