--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vueuse/core": "^9.11.0",
     "commitlint": "^17.4.2",
     "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "pinia": "^2.0.29",
