--- a/package.json
+++ b/package.json
@@ -19,15 +19,23 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.40.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vueuse/core": "^9.11.0",
     "commitlint": "^17.4.2",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "pinia": "^2.0.29",
     "pinia-plugin-persist": "^1.0.0",
+    "prettier": "^2.8.3",
     "sass": "^1.57.1",
     "typescript": "^4.9.3",
     "unplugin-auto-import": "^0.12.1",
