--- a/package.json
+++ b/package.json
@@ -44,7 +44,15 @@
     "vue-tsc": "^1.0.11"
   },
   "lint-staged": {
-    "src/**": "eslint"
+    "*.{js,ts,jsx,tsx}": [
+      "eslint --fix"
+    ],
+    "*.vue": [
+      "eslint --fix"
+    ],
+    "*.{scss,less,css}": [
+      "prettier --write"
+    ]
   },
   "commitlint": {
     "extends": [
