--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "unplugin-auto-import": "^0.12.1",
     "vite": "^4.0.0",
     "vue-router": "^4.1.6",
-    "vue-tsc": "^1.0.11"
+    "vue-tsc": "^1.0.11",
+    "ywdash": "^0.1.7"
   },
   "lint-staged": {
     "*.{js,ts,jsx,tsx}": [
