--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@arco-design/web-vue": "^2.42.0",
     "@commitlint/config-conventional": "^17.4.2",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
